# Gen-lib-from-MATLAB

./: CMakeLists.txt  README.md  eigmatrix.prj  eigmatrixSample1.m
eigmatrix/for_redistribution_files_only/: CMakeLists.txt  GettingStarted.html  eigmatrix.h  eigmatrix.lib
eigmatrix/for_redistribution_files_only/samples/: eigmatrixSample1_mda.cpp  eigmatrixSample1_mwarray.cpp
eigmatrix/for_redistribution_files_only/v2/generic_interface/: eigmatrix.ctf  readme.txt
